增加了map，增加了map查询功能，增加了map选择功能

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,12 @@
 
 <h1 style="color:blue;font-size:3em;text-align:center;">Welcome to GothonGame</h1>
-<img src="../images/1.png" alt="xiaomai" width="258px" height="256px" />
-<form action="/game" method="post">
+
+<form action="/roomdes" method="get">
+
     <p align="center">
     username:<input type="text" name="username" ><br/>
     password:<input type="text" name="password" align="center"><br/>
     <input type="submit" value="Login" align="center">
     </p>
 </form>
+<img src="images/1.png" alt="xiaomai" width="258px" height="256px" />
